# hs

./: .hlint.yaml  cabal.project.freeze  dev  hs.cabal  install  pkgname.cabal
app/: Main.hs
src/: Prelude.hs
src/Hs/: Cabal.hs  Hlint.hs  LanguageExtension.hs  Main.hs  Process.hs  Streaming.hs
src/Hs/Cabal/: Component.hs  Output.hs  Package.hs
src/Hs/Eff/: Register.hs
src/Hs/Git/: LsFiles.hs
src/Hs/Main/: Build.hs  BuildPlan.hs  Dev.hs  Format.hs  Lint.hs  Outdated.hs  Refactor.hs  TravisCi.hs
src/Hs/Shell/: HaskellCi.hs
