cabal-version: 2.4

author:       Mitchell Rosen
bug-reports:  https://github.com/mitchellwrosen/hs/issues
category:     Data
copyright:    (c) 2019, Mitchell Rosen
description:  Description
homepage:     https://github.com/mitchellwrosen/hs
license-file: LICENSE
license:      BSD-3-Clause
maintainer:   Mitchell Rosen <mitchellwrosen@gmail.com>
name:         hs
synopsis:     Synopsis
version:      0

tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5

extra-source-files:
  -- .travis.yml
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/hs.git

common common
  build-depends:
    base,

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -fprint-expanded-synonyms
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -fprint-unicode-syntax
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-local-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances
    -Wredundant-constraints
  if impl(ghc >= 8.4)
    ghc-options:
      -Wpartial-fields

  mixins:
    base hiding (Prelude),
    base (Prelude as BasePrelude)

library
  import:
    common

  build-depends:
    ansi-terminal,
    bytestring,
    concurrent-output,
    containers,
    directory,
    fused-effects,
    hashable,
    managed,
    megaparsec,
    optparse-applicative,
    resourcet,
    stm,
    stm-chans,
    streaming,
    text,
    transformers,
    typed-process,
    unliftio,
    unliftio-core,
    unordered-containers,

  exposed-modules:
    Hs.Cabal
    Hs.Cabal.Build.Spec
    Hs.Cabal.Build.Stderr
    Hs.Cabal.Build.Stdout
    Hs.Cabal.Component
    Hs.Cabal.Package
    Hs.Eff.Register
    Hs.Hlint
    Hs.Main
    Hs.Main.Build
    Hs.Main.Build.Render
    Hs.Main.Build.Spec
    Hs.Main.Dev
    Hs.Main.Lint
    Hs.Main.Refactor
    Hs.Streaming
    Prelude

  hs-source-dirs:
    src

  other-modules:

executable hs
  import:
    common,

  build-depends:
    async,
    concurrent-output,
    fused-effects,
    hs,
    managed,
    optparse-applicative,
    stm,
    stm-chans,
    streaming,
    temporary,
    text,
    typed-process,
    -- unix,

  ghc-options:
    -threaded "-with-rtsopts=-N"

  hs-source-dirs:
    app

  main-is:
    Main.hs
