cabal-version: 2.4

author:       Mitchell Rosen
bug-reports:  https://github.com/mitchellwrosen/hs/issues
category:     Data
copyright:    (c) 2019, Mitchell Rosen
description:  Description
homepage:     https://github.com/mitchellwrosen/hs
license-file: LICENSE
license:      BSD-3-Clause
maintainer:   Mitchell Rosen <mitchellwrosen@gmail.com>
name:         hs
synopsis:     Synopsis
version:      0

tested-with:
    GHC == 8.0.2
  , GHC == 8.2.2
  , GHC == 8.4.4
  , GHC == 8.6.5

extra-source-files:
  -- .travis.yml
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: git://github.com/mitchellwrosen/hs.git

common common
  build-depends:
    base,

  default-extensions:
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

  default-language:
    Haskell2010

  ghc-options:
    -fprint-expanded-synonyms
    -fprint-explicit-foralls
    -fprint-explicit-kinds
    -fprint-unicode-syntax
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-local-signatures
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monadfail-instances
    -Wredundant-constraints
  if impl(ghc >= 8.4)
    ghc-options:
      -Wpartial-fields

  mixins:
    base hiding (Prelude),
    base (Prelude as BasePrelude)

library hs-internal
  import:
    common

  build-depends:
    ansi-terminal ^>= 0.9.1,
    bytestring ^>= 0.10.8,
    Cabal ^>= 2.4.0,
    concurrent-output ^>= 1.10.10,
    containers ^>= 0.6.0,
    directory ^>= 1.3.3,
    fused-effects ^>= 0.4.0,
    hashable ^>= 1.3.0,
    generic-lens ^>= 1.1.0,
    lens ^>= 4.17.1,
    managed ^>= 1.0.6,
    megaparsec ^>= 7.0.5,
    optparse-applicative ^>= 0.14.3,
    resourcet ^>= 1.2.2,
    say ^>= 0.1.0,
    stm ^>= 2.5.0,
    stm-chans ^>= 3.0.0,
    streaming ^>= 0.2.2,
    text ^>= 1.2.3,
    transformers ^>= 0.5.6,
    typed-process ^>= 0.2.5,
    unliftio ^>= 0.2.11,
    unliftio-core ^>= 0.1.2,
    unordered-containers ^>= 0.2.10,

  exposed-modules:
    Hs.Cabal
    Hs.Cabal.Build.Spec
    Hs.Cabal.Build.Stderr
    Hs.Cabal.Build.Stdout
    Hs.Cabal.Component
    Hs.Cabal.Package
    Hs.Eff.Register
    Hs.Git.LsFiles
    Hs.Hlint
    Hs.LanguageExtension
    Hs.Main
    Hs.Main.Build
    Hs.Main.Build.Render
    Hs.Main.Build.Spec
    Hs.Main.Dev
    Hs.Main.Format
    Hs.Main.Lint
    Hs.Main.Outdated
    Hs.Main.Refactor
    Hs.Streaming
    Prelude

  hs-source-dirs:
    src

  other-modules:

executable hs
  import:
    common,

  build-depends:
    concurrent-output,
    fused-effects,
    ghc-paths,
    hs-internal,
    managed,
    optparse-applicative,
    temporary,
    typed-process,

  ghc-options:
    -threaded "-with-rtsopts=-N"

  hs-source-dirs:
    app

  main-is:
    Main.hs
